Fixed problems withArgs script

--- a/plot/graph.tex
+++ b/plot/graph.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2020-08-24 13:14:10
+% Created by tikzDevice version 0.12.3.1 on 2020-08-24 13:39:34
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -11,74 +11,150 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (  0.00,  0.00) rectangle (361.35,361.35);
 \end{scope}
 \begin{scope}
-\path[clip] ( 40.02, 30.69) rectangle (355.85,355.85);
+\path[clip] ( 49.31, 30.69) rectangle (355.85,355.85);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] ( 40.02, 30.69) rectangle (355.85,355.85);
+\path[fill=fillColor] ( 49.31, 30.69) rectangle (355.85,355.85);
 \definecolor{drawColor}{gray}{0.92}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 40.02,193.27) --
-	(355.85,193.27);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 49.31, 82.41) --
+	(355.85, 82.41);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (197.94, 30.69) --
-	(197.94,355.85);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 49.31,156.31) --
+	(355.85,156.31);
+
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 49.31,230.22) --
+	(355.85,230.22);
+
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 49.31,304.12) --
+	(355.85,304.12);
+
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 63.24, 30.69) --
+	( 63.24,355.85);
+
+\path[draw=drawColor,line width= 0.3pt,line join=round] (174.71, 30.69) --
+	(174.71,355.85);
+
+\path[draw=drawColor,line width= 0.3pt,line join=round] (286.18, 30.69) --
+	(286.18,355.85);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 49.31, 45.46) --
+	(355.85, 45.46);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 49.31,119.36) --
+	(355.85,119.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 49.31,193.26) --
+	(355.85,193.26);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 49.31,267.17) --
+	(355.85,267.17);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 49.31,341.07) --
+	(355.85,341.07);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (118.98, 30.69) --
+	(118.98,355.85);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (230.45, 30.69) --
+	(230.45,355.85);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (341.92, 30.69) --
+	(341.92,355.85);
 \definecolor{drawColor}{RGB}{0,0,0}
+\definecolor{fillColor}{RGB}{0,0,0}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27) --
-	(197.94,193.27);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 63.24, 45.47) circle (  1.96);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 91.11, 45.61) circle (  1.96);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (230.45,193.26) circle (  1.96);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (118.98,119.36) circle (  1.96);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (130.12,156.31) circle (  1.96);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (341.92,341.07) circle (  1.96);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (202.58,178.48) circle (  1.96);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (185.86,104.58) circle (  1.96);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (163.56,171.09) circle (  1.96);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (152.42,148.92) circle (  1.96);
+
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] ( 63.24, 45.75) circle (  1.96);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 40.02, 30.69) rectangle (355.85,355.85);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 49.31, 30.69) rectangle (355.85,355.85);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,361.35);
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 35.07,190.24) {mph};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 44.36, 42.43) {0};
+
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 44.36,116.33) {50000};
+
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 44.36,190.23) {100000};
+
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 44.36,264.14) {150000};
+
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 44.36,338.04) {200000};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,361.35);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 37.27,193.27) --
-	( 40.02,193.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 46.56, 45.46) --
+	( 49.31, 45.46);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 46.56,119.36) --
+	( 49.31,119.36);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 46.56,193.26) --
+	( 49.31,193.26);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 46.56,267.17) --
+	( 49.31,267.17);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 46.56,341.07) --
+	( 49.31,341.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,361.35);
 \definecolor{drawColor}{gray}{0.20}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (197.94, 27.94) --
-	(197.94, 30.69);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (118.98, 27.94) --
+	(118.98, 30.69);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (230.45, 27.94) --
+	(230.45, 30.69);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] (341.92, 27.94) --
+	(341.92, 30.69);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,361.35);
 \definecolor{drawColor}{gray}{0.30}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (197.94, 19.68) {threads};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (118.98, 19.68) {20};
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (230.45, 19.68) {40};
+
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (341.92, 19.68) {60};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,361.35);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (197.94,  7.64) {$x$ =  threads};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at (202.58,  7.64) {$x$ =  age};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,361.35);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08,193.27) {$y$ =  mph};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08,193.27) {$y$ =  income};
 \end{scope}
 \end{tikzpicture}
